--- a/client/src/app/institutions-page/institutions-form/institutions-form.component.html
+++ b/client/src/app/institutions-page/institutions-form/institutions-form.component.html
@@ -26,7 +26,7 @@ class="institution dark-{{session.firstColor}}-border"
     
     <input type="file" (change)="onFileUpload($event)"><br>
     <img 
-    class="now_img" 
+    class="now_img invert-{{session.invert}}" 
     [src]="imagePreview"
     *ngIf="imagePreview"
     > 
