--- a/client/src/app/shared/layouts/group-layout/group-layout.component.html
+++ b/client/src/app/shared/layouts/group-layout/group-layout.component.html
@@ -1,8 +1,8 @@
-<div class="body" *ngIf="!reloading; else reloader">
+<div class="body invert-{{session.invert}}" *ngIf="!reloading; else reloader">
     <div class="chat light-{{session.firstColor}}-bg">
           <div id="header" class="light-{{session.secondColor}}-bg dark-{{session.secondColor}}-border">
-               <img class="avatar green-cursor" id="friend" [src]="group.chatImage" (click)="openForm()">
-               <img class="avatar green-cursor" id="me" [src]="session.photo" (click)="openZoom(session.photo, session.name + ' ' + session.surname)">
+               <img class="avatar green-cursor invert-{{session.invert}}" id="friend" [src]="group.chatImage" (click)="openForm()">
+               <img class="avatar green-cursor invert-{{session.invert}}" id="me" [src]="session.photo" (click)="openZoom(session.photo, session.name + ' ' + session.surname)">
           </div>
 
           <div id="section" class="light-{{session.secondColor}}-bg">
@@ -15,11 +15,11 @@
                          id="{{letter._id}}">
                               <div *ngFor="let message of letter.message; let i = index" class="div-in-li">
                                    <div *ngIf="letter.type[i] == 1"  class="div-in-li">
-                                        <img [src]="message" class="div-img green-cursor" (click)="openZoom(message)">
+                                        <img [src]="message" class="div-img green-cursor white invert-{{session.invert}}" (click)="openZoom(message)">
                                    </div>
 
                                    <div *ngIf="letter.type[i] == 2" class="div-in-li">
-                                        <div appEasyLang class="div-text">{{message}}</div>
+                                        <div [appEasyLang]="session" class="div-text">{{message}}</div>
                                         <div class="screenread-btn green-cursor" 
                                         *ngIf="session.screenreader"
                                         (click)="screenRead(message)"></div>
@@ -40,13 +40,13 @@
                                    <div *ngIf="letter.type[i] == 5" class="div-in-li">
                                         <a [href]="message" class="div-in-li green-cursor" download>
                                              <img src="/images/docs.png" class="div-doument"> 
-                                             <span class="docs" appEasyLang>ДОКУМЕНТ</span>
+                                             <span class="docs" [appEasyLang]="session">Документ</span>
                                         </a>
                                    </div>
                               </div>
                               <div class="footer-out">
-                                   <div *ngIf="letter.read.length > 1 && session.read" class="see-message footer"></div>
-                                   <div *ngIf="letter.read.length <= 1 && session.read" class="notsee-message footer"></div>
+                                   <div *ngIf="letter.read.length > 1 && session.read" class="see-message footer invert-{{session.invert}}"></div>
+                                   <div *ngIf="letter.read.length <= 1 && session.read" class="notsee-message footer invert-{{session.invert}}"></div>
                                    <div class="delete-message-btn footer green-cursor" (click)="openDeleteMessage(letter)"></div>
                               </div>
                               <div *ngIf="session.time" class="message_time">{{getDateString(letter.time)}}</div>
@@ -55,13 +55,13 @@
                          <div *ngIf="letter.sender != session._id"  
                          class="inter-message message dark-{{session.firstColor}}-border"
                          id="{{letter._id}}">
-                              <img [src]="letter.senderPhoto" (click)="openZoom(letter.senderPhoto)" class="footer green-cursor cover inline-block"/>
-                              <div class="div-in-li inline-block senderName" appEasyLang>
+                              <img [src]="letter.senderPhoto" (click)="openZoom(letter.senderPhoto)" class="footer green-cursor cover inline-block invert-{{session.invert}}"/>
+                              <div class="div-in-li inline-block senderName" [appEasyLang]="session">
                                    <b>{{letter.senderName}}</b>
                               </div>
                               <div *ngFor="let message of letter.message; let i = index" class="div-in-li">
                                    <div *ngIf="letter.type[i] == 1"  class="div-in-li">
-                                        <img [src]="message" class="div-img green-cursor" (click)="openZoom(message)">
+                                        <img [src]="message" class="div-img white green-cursor invert-{{session.invert}}" (click)="openZoom(message)">
                                         <div class="footer-out">
                                              <div class="answers-message-btn footer green-cursor" 
                                              *ngIf="withAnswers.includes(message) && session.answers"
@@ -70,7 +70,7 @@
                                    </div>
 
                                    <div *ngIf="letter.type[i] == 2" class="div-in-li">
-                                        <div appEasyLang class="div-text">{{message}}</div>
+                                        <div [appEasyLang]="session" class="div-text">{{message}}</div>
                                         <div class="screenread-btn green-cursor" 
                                         *ngIf="session.screenreader"
                                         (click)="screenRead(message)"></div>
@@ -82,7 +82,7 @@
                                         </audio>
                                    </div>
 
-                                   <div *ngIf="letter.type[i] == 4" class="div-in-li">
+                                   <div *ngIf="letter.type[i] == 4" class="div-in-li invert-{{session.invert}}">
                                         <video controls class="div-img">
                                              <source [src]="message">
                                         </video>
@@ -91,7 +91,7 @@
                                    <div *ngIf="letter.type[i] == 5" class="div-in-li">
                                         <a [href]="message" class="div-in-li green-cursor" download>
                                              <img src="/images/docs.png" class="div-doument"> 
-                                             <span class="docs" appEasyLang>ДОКУМЕНТ</span>
+                                             <span class="docs" [appEasyLang]="session">Документ</span>
                                         </a>
                                    </div>
                               </div>
@@ -103,8 +103,8 @@
           </div>
 
           <div id="chat" class="light-{{session.firstColor}}-bg">
-               <textarea class="text text-cursor" id="tc" [(ngModel)]="textarea"></textarea>
-               <div id="footer_letter" (click)="newText()" class="green-cursor"></div>
+               <textarea class="text text-cursor-{{!!session.invert}}" id="tc" [(ngModel)]="textarea"></textarea>
+               <div id="footer_letter" (click)="newText()" class="green-cursor invert-{{session.invert}}"></div>
           </div>
 
           <ng-template #loader>
@@ -118,8 +118,8 @@
         (newMessage)="newMessageFromMe($event)"></app-group-page>
     </div>
 
-    <app-picture-zoom *ngIf="zoom" [image]="image" [text_bottom]="text_bottom" (result)="closeZoom($event)"></app-picture-zoom>
-    <app-delete-one-message *ngIf="deleteMessage" [letter]="deleteID" (result)="closeDeleteMessage($event)"></app-delete-one-message>
+    <app-picture-zoom *ngIf="zoom" [image]="image" [text_bottom]="text_bottom" [session]="session" (result)="closeZoom($event)"></app-picture-zoom>
+    <app-delete-one-message *ngIf="deleteMessage" [letter]="deleteID" [session]="session" (result)="closeDeleteMessage($event)"></app-delete-one-message>
     <app-event-in-group-form *ngIf="eventForm" [group]="group" [session]="session" (result)="closeForm($event)" (newEvent)="newEvent($event)"></app-event-in-group-form>
     <ng-template appRef></ng-template>
 </div>
