--- a/client/src/app/events-page/events-page.component.html
+++ b/client/src/app/events-page/events-page.component.html
@@ -1,37 +1,41 @@
 <div *ngIf="!reloading; else reloader">
 
     <div class="box-friend">
-        <img 
-        class="friendAvatar dark-{{session.firstColor}}-border green-cursor" 
-        src="/images/emo.png"
-        (click)="goToEmoBot()">
-        <div class="letter green-cursor"
+        <div class="dark-{{session.firstColor}}-border friendAvatar-container">
+            <img 
+            class="friendAvatar dark-{{session.firstColor}}-border green-cursor invert-{{session.invert}}" 
+            src="/images/emo.png"
+            (click)="goToEmoBot()">
+        </div>
+        <div class="letter green-cursor invert-{{session.invert}}"
         *ngIf="emo"
         (click)="goToEmoBot()"> </div>  
         <div class="friendName tc dark-{{session.firstColor}}-border green-cursor" (click)="goToEmoBot()">
-            <span appEasyLang>ЭМО</span><br>
+            <span [appEasyLang]="session">ЭМО</span><br>
         </div>                                             	 
    </div>
 
    <div class="box-friend" *ngFor="let event of events">
-        <img 
-        class="friendAvatar dark-{{session.firstColor}}-border green-cursor" 
-        [src]="event.chatImage"
-        (click)="goToChat(event._id)">
-        <div class="letter green-cursor"
+        <div class="dark-{{session.firstColor}}-border friendAvatar-container">
+            <img 
+            class="friendAvatar green-cursor invert-{{session.invert}}" 
+            [src]="event.chatImage"
+            (click)="goToChat(event._id)">
+        </div>
+        <div class="letter green-cursor invert-{{session.invert}}"
         *ngIf="event.letter"
         (click)="goToChat(event._id)"> </div>  
         <div class="friendName tc dark-{{session.firstColor}}-border green-cursor" (click)="goToChat(event._id)">
             <div *ngIf="!event.chatTitle">
                 <div *ngIf="buttons$ | async as buttons">
                     <span *ngFor="let button of buttons">
-                        <span *ngIf="event.type == button.type" appEasyLang>{{button.text}}</span>
+                        <span *ngIf="event.type == button.type" [appEasyLang]="session">{{button.text}}</span>
                     </span><br>
                     <span *ngIf="event.date">{{event.date | date:"dd.MM.yyyy HH:mm"}}</span>
                 </div>
             </div>
             <div *ngIf="event.chatTitle">
-                <span appEasyLang>{{event.chatTitle}}</span><br>
+                <span [appEasyLang]="session">{{event.chatTitle}}</span><br>
                 <span *ngIf="event.date">{{event.date | date:"dd.MM.yyyy HH:mm"}}</span>
             </div>
         </div> 
