--- a/client/src/app/games/game-layout/game-layout.component.html
+++ b/client/src/app/games/game-layout/game-layout.component.html
@@ -1,10 +1,10 @@
-<div *ngIf="!reloading; else reloader" class="light-{{session.firstColor}}-bg page">
+<div *ngIf="!reloading; else reloader" class="light-{{session.firstColor}}-bg page invert-{{session.invert}}">
 
     <div class="game dark-{{session.firstColor}}-border">
         <router-outlet></router-outlet>
     </div>
 
-    <div class="exit green-cursor" (click)="cross()"></div>
+    <div class="exit green-cursor invert-{{session.invert}}" (click)="cross()"></div>
 
 </div>
 
