--- a/client/src/app/games/rating/rating.component.css
+++ b/client/src/app/games/rating/rating.component.css
@@ -1,8 +1,10 @@
-.page {
-    min-height: 100vh;
-    position: relative;
+.body {
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
     overflow: auto;
-    padding: 20px;
+    margin: 0;
+    /* padding: 20px; */
 }
 
 .ratingBox {
@@ -51,13 +53,11 @@
 }
 
 .header {
-    width: 100%;
-    height: 1cm;
-    top: 0;
     position: fixed;
+    left: 0;
+    right: 0;
     padding: 0.2cm;
     z-index: 3;
-    overflow: hidden;
 }
 .search {
     margin-top: 1.5cm;
