--- a/client/src/app/login-page/login-page.component.html
+++ b/client/src/app/login-page/login-page.component.html
@@ -1,14 +1,14 @@
 <div class="emo_pt">
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
-          <p class="entrance tc notadmin" appEasyLang>Логин: </p>
+          <p class="entrance tc notadmin" [appEasyLang]="{easyLang: true}">Логин: </p>
           <input 
           name="username"
           formControlName="login"
           autocomplete="on"
-          class="entrance text-cursor">
+          class="entrance text-cursor-false">
 
-          <p class="entrance tc entrance_password notadmin" appEasyLang>Пароль:</p>
+          <p class="entrance tc entrance_password notadmin" [appEasyLang]="{easyLang: true}">Пароль:</p>
           <ng-container>
                <input 
                #password
@@ -16,7 +16,7 @@
                name="password"
                formControlName="password"
                autocomplete="on"
-               class="entrance text-cursor">
+               class="entrance text-cursor-false">
                <span class="password-control green-cursor" #password_control (click)="show_hide_password()"></span>
           </ng-container>
           
@@ -31,8 +31,8 @@
           for="bottom_entrance_hidden"
           id="bottom_entrance" 
           class="tc green-cursor"
-          appEasyLang>
-               ВХОД
+          [appEasyLang]="{easyLang: true}">
+               Вход
           </label>            
 
     </form>
@@ -50,7 +50,7 @@
 </div>
 <div class="emo_pt">
      <img id="emoPicture" src="/images/emo.png">
-     <h1 class="tc" id="emoText" appEasyLang>ЭМО</h1>
+     <h1 class="tc" id="emoText" [appEasyLang]="{easyLang: true}">ЭМО</h1>
 </div>
 <div class="footer">
      <a 
