--- a/client/src/app/pictures-page/pictures-form/pictures-form.component.html
+++ b/client/src/app/pictures-page/pictures-form/pictures-form.component.html
@@ -27,7 +27,7 @@ class="dark-{{session.firstColor}}-border"
             <p class="in_new_user dark-{{session.firstColor}}-color">Чёрно-белая пиктограмма для мальчиков:</p>
             <input type="file"  formControlName="boysGreyPicture"  (change)="onFile1Upload($event)"><br>
             <img 
-            class="now_img" 
+            class="now_img invert-{{session.invert}}" 
             [src]="image1Preview"
             *ngIf="image1Preview"
             >
@@ -38,7 +38,7 @@ class="dark-{{session.firstColor}}-border"
             <p class="in_new_user dark-{{session.firstColor}}-color">Чёрно-белая пиктограмма для девочек:</p>
             <input type="file" formControlName="girlsGreyPicture"  (change)="onFile2Upload($event)"><br>
             <img 
-            class="now_img" 
+            class="now_img invert-{{session.invert}}" 
             [src]="image2Preview"
             *ngIf="image2Preview"
             >
@@ -49,7 +49,7 @@ class="dark-{{session.firstColor}}-border"
             <p class="in_new_user dark-{{session.firstColor}}-color">Цветная пиктограмма для мальчиков:</p>
             <input type="file" formControlName="boysColorPicture"  (change)="onFile3Upload($event)"><br>
             <img 
-            class="now_img" 
+            class="now_img invert-{{session.invert}}" 
             [src]="image3Preview"
             *ngIf="image3Preview"
             >
@@ -60,7 +60,7 @@ class="dark-{{session.firstColor}}-border"
             <p class="in_new_user dark-{{session.firstColor}}-color">Цветная пиктограмма для девочек:</p>
             <input type="file" formControlName="girlsColorPicture"  (change)="onFile4Upload($event)"><br>
             <img 
-            class="now_img" 
+            class="now_img invert-{{session.invert}}" 
             [src]="image4Preview"
             *ngIf="image4Preview"
             >
@@ -82,7 +82,7 @@ class="dark-{{session.firstColor}}-border"
             
             <input type="file" formControlName="boysGreyPicture" (change)="onFile1Upload($event)"><br>
             <img 
-            class="now_img" 
+            class="now_img invert-{{session.invert}}" 
             [src]="image1Preview"
             *ngIf="image1Preview"
             > 
