--- a/client/src/app/registr-page/registr-page.component.html
+++ b/client/src/app/registr-page/registr-page.component.html
@@ -1,39 +1,39 @@
 <div class="emo_pt">
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
-        <p class="entrance tc notadmin" appEasyLang>Логин: </p>
+        <p class="entrance tc notadmin" [appEasyLang]="{easyLang: true}">Логин: </p>
         <input 
         formControlName="login"
         name="username"
         autocomplete="on"
-        class="entrance text-cursor">
+        class="entrance text-cursor-false">
 
 
        
         <div>
-            <p class="entrance tc entrance_password notadmin" appEasyLang>Пароль:</p>
+            <p class="entrance tc entrance_password notadmin" [appEasyLang]="{easyLang: true}">Пароль:</p>
             <input 
             name="password"
             type="password"
             #password
             formControlName="password"
             autocomplete="new-password"
-            class="entrance text-cursor">
+            class="entrance text-cursor-false">
             <span class="password-control green-cursor" #password_control (click)="show_hide_password()"></span>
         </div>
 
-        <p class="entrance tc notadmin" appEasyLang>Имя: </p>
+        <p class="entrance tc notadmin" [appEasyLang]="{easyLang: true}">Имя: </p>
         <input 
         formControlName="name"
-        class="entrance text-cursor">
+        class="entrance text-cursor-false">
 
-        <p class="entrance tc notadmin" appEasyLang>Фамилия:</p>
+        <p class="entrance tc notadmin" [appEasyLang]="{easyLang: true}">Фамилия:</p>
         <input 
         formControlName="surname"
-        class="entrance text-cursor">
+        class="entrance text-cursor-false">
         <br>
 
-        <p class="entrance tc notadmin" appEasyLang>Пол:</p>
+        <p class="entrance tc notadmin" [appEasyLang]="{easyLang: true}">Пол:</p>
         <label class="radio" [ngClass]="{checked: form.value.sex == '1'}">
             <input name="sex" type="radio" value="1" formControlName="sex" hidden (change)='changeSex()'> 
             <div class="yes green-cursor"></div> 
@@ -44,15 +44,15 @@
             <div class="no green-cursor"></div> 
         </label><br>
 
-        <p class="entrance tc notadmin" appEasyLang>Дата рождения:</p>
+        <p class="entrance tc notadmin" [appEasyLang]="{easyLang: true}">Дата рождения:</p>
         <input name="date" type="date" formControlName="birthDate" class="datetime-local green-cursor"> <br>
             
-        <p class="entrance tc notadmin" appEasyLang>Фотография:</p>
+        <p class="entrance tc notadmin" [appEasyLang]="{easyLang: true}">Фотография:</p>
         <label class="radio">
             <input name="file" type="file" hidden (change)='onFileUpload($event)'> 
             <div class="green-cursor" [ngClass]="{checked_file: image, no_file: !image}"></div> 
         </label><br>
-        <p class="entrance tc notadmin" appEasyLang>Организация:</p>
+        <p class="entrance tc notadmin" [appEasyLang]="{easyLang: true}">Организация:</p>
         <select 
         class="inheader green-cursor" 
         *ngIf="institutions$ | async as institutions" 
@@ -60,8 +60,8 @@
             <option value="">Не выбрано</option>
             <option *ngFor="let institution of institutions" value="{{institution._id}}">{{institution.name}}</option>
         </select>
-        <p class="entrance tc notadmin" appEasyLang style="width: 80vw;">Любая дополнительная информация:</p>
-        <textarea formControlName="info" class="textarea text-cursor" placeholder="{{form.value.institution ? 'дополнительная информация' : 'укажите организацию'}}"></textarea> 
+        <p class="entrance tc notadmin" [appEasyLang]="{easyLang: true}" style="width: 80vw;">Любая дополнительная информация:</p>
+        <textarea formControlName="info" class="textarea text-cursor-fasle" placeholder="{{form.value.institution ? 'дополнительная информация' : 'укажите организацию'}}"></textarea> 
         <br>
 
         <button 
@@ -75,7 +75,7 @@
         for="bottom_entrance_hidden"
         id="bottom_entrance" 
         class="tc green-cursor"
-        appEasyLang>
+        [appEasyLang]="{easyLang: true}">
             ОТПРАВИТЬ ЗАПРОС
         </label>            
 
