--- a/client/src/app/shared/layouts/people-layout/people-layout.component.css
+++ b/client/src/app/shared/layouts/people-layout/people-layout.component.css
@@ -8,11 +8,21 @@
     display: none;
 }
 .myPhotoIMG {
-    width: 100%;
-    height: 100%;
+    width: 15vw;
+    height: 15vw;
+    position: relative;
+    object-fit: cover;
+    border-radius: 7px;
+    display: block;
+}
+.myPhotoIMG-container {
     border-style: solid;
     border-radius: 10px;
     border-width: 3px;
+    width: 15vw;
+    height: 15vw;
+    object-fit: cover;
+    position: relative;
 }
 .menu {
     z-index: 3;
