--- a/client/src/app/video-rooms-page/video-room-page/video-room-page.component.html
+++ b/client/src/app/video-rooms-page/video-room-page/video-room-page.component.html
@@ -40,14 +40,14 @@
                       message.sender == session._id 
                       )
                        ? "Я" : message.senderName}}</span> </b>
-                <span appEasyLang>{{message.message}}</span> 
+                <span [appEasyLang]="session">{{message.message}}</span> 
             </div>
             <div id="forScroll"></div>
         </div>
     </div>
 
     <div class="main__message_container">
-      <textarea [(ngModel)]="chat_message" autocomplete="off" placeholder="Сообщение..." class="text-cursor"></textarea>
+      <textarea [(ngModel)]="chat_message" autocomplete="off" placeholder="Сообщение..." class="text-cursor-{{!!session.invert}}"></textarea>
       <div class="options__button green-cursor" (click)="messageButton()">
         <i class="fa fa-plus" aria-hidden="true"></i>
       </div>
@@ -59,17 +59,17 @@
 
 <div class="info_container" *ngIf="status < 0">
     <div class="info_box pNotAdmin">
-        <div appEasyLang *ngIf="status == -1">Комната выключена</div>
-        <div appEasyLang *ngIf="status == -2">Комната не найдена</div>
-        <div appEasyLang *ngIf="status == -3">Вы не можете открыть две комнаты одновременно</div>
+        <div [appEasyLang]="session" *ngIf="status == -1">Комната выключена</div>
+        <div [appEasyLang]="session" *ngIf="status == -2">Комната не найдена</div>
+        <div [appEasyLang]="session" *ngIf="status == -3">Вы не можете открыть две комнаты одновременно</div>
     </div>
     <div class="exit" (click)="exit()"></div>
 </div>
 <div class="info_container" *ngIf="status == 1">
     <div class="info_box pNotAdmin">
         <div>
-            <div appEasyLang>Вы не авторизованы</div>
-            <input type='text' placeholder="ВАШЕ ИМЯ" [(ngModel)]="anonimName" class='unauth_input text-cursor'>
+            <div [appEasyLang]="session">Вы не авторизованы</div>
+            <input type='text' placeholder="ВАШЕ ИМЯ" [(ngModel)]="anonimName" class='unauth_input text-cursor-{{!!session.invert}}'>
         </div>
         <div class="tick" (click)="createUser()"></div>
     </div>
@@ -79,14 +79,14 @@
 
 <div class="info_container" *ngIf="status == 3">
   <div class="info_box pNotAdmin">
-      <div appEasyLang>Ошибка. Вы уже подключены к этой комнате. Обновите страницу, чтобы подключиться здесь</div>
+      <div [appEasyLang]="session">Ошибка. Вы уже подключены к этой комнате. Обновите страницу, чтобы подключиться здесь</div>
   </div>
   <div class="exit" (click)="exit()"></div>
 </div>
 
 <div class="backdrop" *ngIf="wantCopyLink">
     <div class="link_box">
-        <div appEasyLang class="pNotAdmin">Копировать ссылку</div>
+        <div [appEasyLang]="session" class="pNotAdmin">Копировать ссылку</div>
         <div *ngIf="!copySuccess">{{host}}{{router.url}}</div>
         <div *ngIf="copySuccess">Ссылка скопирована</div>
         <div class="link_buttons">
