--- a/client/src/theme/friends.css
+++ b/client/src/theme/friends.css
@@ -25,7 +25,7 @@
     z-index: 3;
 }
   
-.friendAvatar {
+.friendAvatar-container {
     margin-top: 5%;
     margin: auto;
     width: 18vw;
@@ -34,7 +34,15 @@
     border-radius: 10px;
     border-width: 3px;
     display: block;
-    object-fit: cover;
+
+}
+
+.friendAvatar {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 7px;
+  object-fit: cover;
 }
   
 .friendName {
@@ -55,7 +63,7 @@
 .menuIMG {
   margin-top: 10px;
   margin-left: 5%;
-  width: 80%;
+  width: 15vw;
   border-style: solid;
   border-radius: 10px;
   border-width: 3px;
@@ -77,7 +85,7 @@
   border-width: 3px;
   margin-top: 10px;
   margin-left: 5%;
-  width: 80%;
+  width: 15vw;
   height: auto;
   font-size: 1.57vw;
   text-align: center;
